[package]
name = "actix-web-requestid"
description = "Request ID middleware for actix-web"
version = "0.4.0"
authors = ["Pierre-Alexandre St-Jean <pa@stjean.me>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/pastjean/actix-web-requestid"
homepage = "https://github.com/pastjean/actix-web-requestid"
documentation = "https://docs.rs/actix-web-requestid"
keywords = ["actix", "actix-web", "web", "middleware", "request-id"]
edition = "2018"

[badges]
codecov = { repository = "pastjean/actix-web-requestid", branch = "master", service = "github" }

[dependencies]
actix-web = "3.3"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
actix-rt = "1.1.1"
