[package]
name = "actix-web-requestid"
description = "Request ID middleware for actix-web"
version = "1.1.0"
authors = ["Pierre-Alexandre St-Jean <pa@stjean.me>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/pastjean/actix-web-requestid"
homepage = "https://github.com/pastjean/actix-web-requestid"
documentation = "https://docs.rs/actix-web-requestid"
keywords = ["actix", "actix-web", "web", "middleware", "request-id"]
edition = "2018"

[badges]
codecov = { repository = "pastjean/actix-web-requestid", branch = "master", service = "github" }

[dependencies]
actix-web = "^3.3.2"
rand = "^0.8.4"
futures = "^0.3.15"

[dev-dependencies]
actix-rt = "2.2.0"
